--- a/codecov.yml
+++ b/codecov.yml
@@ -1,16 +1,19 @@
+component_management:
+  individual_components:
+    - component_id: api-calculator # this is an identifier that should not be changed
+      name: calculator # this is a display name, and can be changed freely
+      paths:
+        - api/calculator/
+    - component_id: api-smiles # this is an identifier that should not be changed
+      name: smiles # this is a display name, and can be changed freely
+      paths:
+        - api/smiles/
+
 coverage:
   status:
     project:
       default:
-        target: 100%
-        threshold: 1%
-
-comment:
-  layout: "condensed_header, diff, flags, components"
-
-component_management:
-  individual_components:
-    - component_id: api # this is an identifier that should not be changed
-      name: api # this is a display name, and can be changed freely
-      paths:
-        - api
+        target: auto
+        flags:
+          - calculator
+          - smiles
