--- a/codecov.yml
+++ b/codecov.yml
@@ -1,19 +1,21 @@
-component_management:
-  individual_components:
-    - component_id: api-calculator # this is an identifier that should not be changed
-      name: calculator # this is a display name, and can be changed freely
-      paths:
-        - api/calculator/
-    - component_id: api-smiles # this is an identifier that should not be changed
-      name: smiles # this is a display name, and can be changed freely
-      paths:
-        - api/smiles/
-
 coverage:
   status:
-    project:
-      default:
-        target: auto
-        flags:
-          - calculator
-          - smiles
+    project: off
+    patch: off
+
+flag_management:
+  individual_flags:
+    - name: backend
+      paths:
+        - api/
+      statuses:
+        - type: project
+          target: 100%
+          threshold: 1%
+    - name: frontend
+      paths:
+        - web/
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
