step6: add Carryforward Flags

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -21,3 +21,8 @@ jobs:
       	CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         flags: backend
+
+on:
+  push:
+    paths:
+      - 'api/**'
