--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,3 +24,8 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           flags: frontend
+
+on:
+  push:
+    paths:
+      - 'web/**'
